--- a/code_checker.html
+++ b/code_checker.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code checker</title>
+    <title>Writio Code Analyzer</title>
+    <link rel="icon" href="../images/writio(wh-bg).png" type=""> 
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/editor/editor.main.css">
 </head>
 <body>
@@ -16,7 +21,8 @@
 </div>
     
     <div class="content-conatiner">
-    <h1 class="cyberpunk glitched"><strong>WRITIO CODE CHECKER</strong></h1>
+    <h1 id="homepage" class="cyberpunk-glitched-header">WRITIO</h1>
+    <h1 class="cyberpunk glitched">CODE ANALYZER</h1>
     <h3 class="cyberpunk glitched">Enter your code here:</h3>
     <div id="editor-container" style="height: 300px; width: auto; border: 1px solid #ccc;"></div>
     <button id="clear_input_btn" class="cyberpunk2077 green">Clear</button><br>
@@ -29,7 +35,7 @@
     <button id="copy_output_btn" class="cyberpunk2077 purple">Copy</button>
     </div>
     <footer>
-        <h2 class="cyberpunk glitched">Made by AMIT.</h2>
+        <h2 class="cyberpunk glitched">Made by <span class="amit">AMIT.</span> </h2>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/loader.min.js"></script>
@@ -44,8 +50,8 @@
             language: 'python',
             theme: 'vs-dark',
             automaticLayout: true,
-            readOnly: false, // Allow editing except the first line
-            cursorStyle: 'default', // Change cursor style to default to indicate non-editable
+            readOnly: false,
+            cursorStyle: 'default', 
             cursorBlinking: 'blink' 
             });
 
@@ -84,7 +90,7 @@
 
                 try {
                     const modifiedPrompt = "Check if the following code has any errors and if so, provide the line number and error description. Also, provide the corrected code: \n\n" + inputCode;
-                    const apiKey = "AIzaSyC3t1Y2VLphaTVviDM82iEe5pMLzap8_xc"; // Replace with your actual API key
+                    const apiKey = "AIzaSyC3t1Y2VLphaTVviDM82iEe5pMLzap8_xc";
                     const genAI = new GoogleGenerativeAI(apiKey);
                     const model = genAI.getGenerativeModel({ model: "gemini-pro" });
                     const result = await model.generateContent(modifiedPrompt);
@@ -97,6 +103,10 @@
                     alert('An error occurred. Please try again.');
                 }
             });
+
+            document.getElementById('homepage').addEventListener('click', function() {
+       window.location.href = 'index.html';
+           });
 
             document.getElementById('clear_input_btn').addEventListener('click', function() {
                 editor.setValue('\n');
