--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Writio</title>
+    <link rel="icon" href="../images/writio(wh-bg).png" type=""> 
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -16,8 +17,9 @@
     <div class="video-overlay"></div>
 </div>
     <header class="site-header">
-        <h1>Welcome to Writio</h1>
-        <h3>Made by Amit</h3>
+        <h1>Welcome to <h1 class="cyberpunk-glitched-header">WRITIO</h1 class="cyberpunk-glitched-header"></h1>
+
+        <h3 style="font-family: Oxanium;">Made by <span class="amit">amit</span> </h3>
         <h4>Writio is a platform that offers tools for generating and translating code snippets efficiently.</h4>
 
     </header>
@@ -26,7 +28,7 @@
         <section class="features">
             <div class="card">
                 <h2>Code Generator</h2>
-                <p>An innovative solution empowering developers to automate the creation of repetitive or complex code segments, enhancing productivity and reducing development time. With customizable templates and intuitive interfaces, it facilitates rapid prototyping and iteration.</p>
+                <p>An innovative solution empowering developers to automate the creation of repetitive or complex code segments, enhancing productivity and reducing development time. With customizable templates and intuitive interfaces, it facilitates rapid iteration.</p>
                 <a href="generator.html" class="card-link"target="_blank">Explore</a>
             </div>
 
@@ -37,9 +39,9 @@
             </div>
 
             <div class="card">
-                <h2>Code Checker</h2>
-                <p> A robust utility engineered to analyze code for errors, inconsistencies, and adherence to coding standards. By identifying potential issues early in the development cycle and facilitates smoother deployment.</p>
-                <a href="code_checker.html" class="card-link" target="_blank">Discover</a>
+                <h2>Code Analyzer</h2>
+                <p> A robust utility engineered to analyze code for errors, inconsistencies, and adherence to coding standards. By identifying potential issues early in the development cycle and facilitates smoother deployment. It helps developers in error solving.</p>
+                <a href="code_checker.html" class="card-link" target="_blank">Uncover</a>
             </div>
             
         </section>
