--- a/translator.html
+++ b/translator.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Translator</title>
+    <title>Writio Code Translator</title>
+    <link rel="icon" href="../images/writio(wh-bg).png" type=""> 
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/editor/editor.main.css">
 </head>
 <body>
+    
     <div class="video-container">
         <video autoplay muted loop id="myVideo">
         <source src="matrix.mp4" type="video/mp4">
@@ -15,8 +21,9 @@
     <div class="video-overlay"></div>
 </div>
     
-    <div class="content-conatiner">
-    <h1 class="cyberpunk glitched"><strong>WRITIO CODE TRANSLATOR</strong></h1>
+    <div class="content-container">
+    <h1 id="homepage" class="cyberpunk-glitched-header">WRITIO</h1>
+    <h1 class="cyberpunk glitched">CODE TRANSLATOR</h1>
     <h3 class="cyberpunk glitched">Enter your code:</h3>
     <div id="editor-container" style="height: 300px; width: auto; border: 1px solid #ccc;"></div>
     <button id="clear_input_btn" class="cyberpunk2077 green">Clear</button><br>
@@ -27,7 +34,13 @@
         <option value="java" class="cyberpunk dropdown-option">Java</option>
         <option value="javascript" class="cyberpunk dropdown-option">JavaScript</option>
         <option value="csharp" class="cyberpunk dropdown-option">C#</option>
-        <!-- Add more language options as needed -->
+        <option value="cpp" class="cyberpunk dropdown-option">C++</option>
+        <option value="php" class="cyberpunk dropdown-option">PHP</option>
+        <option value="ruby" class="cyberpunk dropdown-option">Ruby</option>
+        <option value="go" class="cyberpunk dropdown-option">Go</option>
+        <option value="swift" class="cyberpunk dropdown-option">Swift</option>
+        <option value="kotlin" class="cyberpunk dropdown-option">Kotlin</option>
+        <option value="rust" class="cyberpunk dropdown-option">Rust</option>
     </select>
 
     <button id="check_btn" class="cyberpunk2077 red">Translate</button>
@@ -39,7 +52,7 @@
     <button id="copy_output_btn" class="cyberpunk2077 purple">Copy</button>
     </div>
     <footer>
-        <h2 class="cyberpunk glitched">Made by AMIT.</h2>
+        <h2 class="cyberpunk glitched">Made by <span class="amit">AMIT.</span> </h2>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/loader.min.js"></script>
@@ -71,6 +84,10 @@
                 { range: model.getFullModelRange(), options: { isWholeLine: true, className: 'permanent-text' } }
             ]);
 
+            document.getElementById('homepage').addEventListener('click', function() {
+       window.location.href = 'index.html';
+           });
+
             document.getElementById('check_btn').addEventListener('click', async function() {
                 const sourceCode = codeEditor.getValue().trim();
                 const targetLanguage = document.getElementById('target_lang').value;
@@ -82,7 +99,7 @@
 
                 try {
                     const modifiedPrompt = `Translate the following code from the source language to ${targetLanguage}:\n\n${sourceCode}`;
-                    const apiKey = "AIzaSyC3t1Y2VLphaTVviDM82iEe5pMLzap8_xc"; // Replace with your actual API key
+                    const apiKey = "AIzaSyC3t1Y2VLphaTVviDM82iEe5pMLzap8_xc"; 
                     const genAI = new GoogleGenerativeAI(apiKey);
                     const model = genAI.getGenerativeModel({ model: "gemini-pro" });
                     const result = await model.generateContent(modifiedPrompt);
