ffs another commit

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <div class="card">
                 <h2>Code Generator</h2>
                 <p>An innovative solution empowering developers to automate the creation of repetitive or complex code segments, enhancing productivity and reducing development time. With customizable templates and intuitive interfaces, it facilitates rapid iteration.</p>
-                <a href="generator.html" class="card-link"target="_blank">Explore</a>
+                <a href="code-generator.html" class="card-link"target="_blank">Explore</a>
             </div>
 
             <div class="card">
                 <h2>Code Translator</h2>
                 <p>A versatile tool designed to seamlessly convert code from one programming language to another, streamlining the process of language migration and enabling developers to maintain functionality across different platforms with ease.</p>
-                <a href="translator.html" class="card-link" target="_blank">Discover</a>
+                <a href="code-translator.html" class="card-link" target="_blank">Discover</a>
             </div>
 
             <div class="card">
                 <h2>Code Analyzer</h2>
                 <p> A robust utility engineered to analyze code for errors, inconsistencies, and adherence to coding standards. By identifying potential issues early in the development cycle and facilitates smoother deployment. It helps developers in error solving.</p>
-                <a href="code_checker.html" class="card-link" target="_blank">Uncover</a>
+                <a href="code-analyzer.html" class="card-link" target="_blank">Uncover</a>
             </div>
             
         </section>
