--- a/code-translator.html
+++ b/code-translator.html
@@ -18,7 +18,7 @@
     
     <div class="video-container">
         <video autoplay muted loop id="myVideo">
-            <source src="matrix.mp4" type="video/mp4">
+            <source src="bg3.mp4" type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
@@ -130,6 +130,19 @@ outputEditorWrapper.style.border = '1px solid var(--border-color)';
                 alert('An error occurred. Please try again.');
             }
         });
+
+         function applyGlassmorphism() {
+            var cmWrappers = document.querySelectorAll('.CodeMirror');
+            cmWrappers.forEach(function(cm) {
+                cm.style.background = 'rgba(255, 255, 255, 0.1)';
+                cm.style.borderRadius = '10px';
+                cm.style.border = '1px solid rgba(255, 255, 255, 0.2)';
+                cm.style.backdropFilter = 'blur(110px)';
+                cm.style.webkitBackdropFilter = 'blur(110px)';
+            });
+        }
+
+        window.onload = applyGlassmorphism;
 
         document.getElementById('clear_input_btn').addEventListener('click', function() {
             codeEditor.setValue('\n// Your code goes here...');
