last commit(ver3)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="video-overlay"></div>
 </div>
     <header class="site-header">
-        <h1>Welcome to <h1 class="cyberpunk-glitched-header">WRITIO</h1 class="cyberpunk-glitched-header"></h1>
-
+        <h2>Welcome to <h1 class="cyberpunk-glitched-header">WRITIO</h1 class="cyberpunk-glitched-header"></h2>
+        <h4>Understanding the role of Artificial Intelligence in new era of development.</h4>
         <h3 style="font-family: Oxanium;">Made by <span class="amit">amit</span> </h3>
-        <h4>Writio is a platform that offers tools for generating and translating code snippets efficiently.</h4>
+        
 
     </header>
 
