--- a/code-analyzer.html
+++ b/code-analyzer.html
@@ -106,6 +106,10 @@
         document.getElementById('clear_input_btn').addEventListener('click', function() {
             codeEditor.setValue('\n// Your code goes here...');
         });
+
+        document.getElementById('homepage').addEventListener('click', function() {
+                window.location.href = 'index.html';
+            });
     
         document.getElementById('clear_output_btn').addEventListener('click', function() {
             outputEditor.setValue('\n// Result:');
