--- a/code-translator.html
+++ b/code-translator.html
@@ -135,6 +135,10 @@
         document.getElementById('clear_input_btn').addEventListener('click', function() {
             codeEditor.setValue('\n// Your code goes here...');
         });
+
+        document.getElementById('homepage').addEventListener('click', function() {
+                window.location.href = 'index.html';
+            });
         
         document.getElementById('clear_output_btn').addEventListener('click', function() {
             outputEditor.setValue('\n// Translated Code:');
