--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Writio</title>
-    <link rel="icon" href="../images/writio(wh-bg).png" type=""> 
-    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="images/writio(wh-bg).png" type="image/png">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="content-container">
     <div class="video-container">
         <video autoplay muted loop id="myVideo">
-        <source src="bg1.mp4" type="video/mp4">
+        <source src="videos/bg1.mp4" type="video/mp4">
     </video>
     <div class="video-overlay"></div>
 </div>
     <header class="site-header">
-        <h2>Welcome to <h1 class="cyberpunk-glitched-header">WRITIO</h1 class="cyberpunk-glitched-header"></h2>
+        <h2>Welcome to </h2><h1 class="cyberpunk-glitched-header">WRITIO</h1>
         <h4>Understanding the role of Artificial Intelligence in new era of development.</h4>
         <h3 style="font-family: Oxanium;">Made by <span class="amit">amit</span> </h3>
         
