--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="site-header">
         <h2>Welcome to </h2><h1 class="cyberpunk-glitched-header">WRITIO</h1>
         <h4>Understanding the role of Artificial Intelligence in new era of development.</h4>
-        <h3 style="font-family: Oxanium;">Made by <span class="amit">amit</span> </h3>
+        <h3 style="font-family: Oxanium;">Made by <span class="amit">Arpit</span> </h3>
         
 
     </header>
