--- a/code-analyzer.html
+++ b/code-analyzer.html
@@ -50,6 +50,15 @@
         import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
         require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs' }});
         require(['vs/editor/editor.main'], function() {
+            async function loadGeminiApiKey() {
+                const response = await fetch('.env.local');
+                const text = await response.text();
+                const match = text.match(/GEMINI_API_KEY\s*=\s*(.+)/);
+                if (!match) {
+                    throw new Error('GEMINI_API_KEY not found in .env.local');
+                }
+                return match[1].trim();
+            }
             var codeEditor = monaco.editor.create(document.getElementById('editor-container'), {
                 value:'// Your code goes here...\n',
                 language: 'plaintext',
@@ -78,7 +87,7 @@
     
                 try {
                     const modifiedPrompt = "Check if the following code has any errors and if so, provide the line number and error description. Also, provide the corrected code: \n\n" + inputCode;
-                    const apiKey = "YOUR_GEMINI_API_KEY"; // Replace with your Google AI Studio API key
+                    const apiKey = await loadGeminiApiKey();
                     const genAI = new GoogleGenerativeAI(apiKey);
                     const model = genAI.getGenerativeModel({ model: "gemini-pro" });
                     const result = await model.generateContent(modifiedPrompt);
